# FastAPI-CRUD

./: README.md  copy.env  pyproject.toml
app/: server.py
app/api/: __init__.py  book_routes.py  health_check_routes.py
app/core/: config.py  constants.py  enums.py  security.py
app/db/: base.py  session.py
app/models/: books.py
app/repositories/: book_repository.py
app/schemas/: books.py
app/services/: book_service.py
migrations/: env.py
tests/: test_integration.py
